Deprecated warning (#291)
remove some deprecated warnings